src/maths_parser.output
Terminals unused in grammar

   T_DO


State 110 conflicts: 2 shift/reduce
State 111 conflicts: 2 shift/reduce
State 112 conflicts: 2 shift/reduce
State 118 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce
State 128 conflicts: 2 shift/reduce
State 129 conflicts: 2 shift/reduce
State 246 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: TRANSUNIT

    2 TRANSUNIT: EXTDECL
    3          | TRANSUNIT EXTDECL

    4 EXTDECL: FUNCDECL
    5        | DECLARATION

    6 FUNCDECL: DECLSPEC DECLARATOR DECLLIST COMPSTAT
    7         | DECLARATOR DECLLIST COMPSTAT
    8         | DECLSPEC DECLARATOR COMPSTAT
    9         | DECLARATOR COMPSTAT
   10         | T_INT T_MAIN T_LBRACKET T_RBRACKET COMPSTAT

   11 JUMPSTAT: T_RETURN EXPRESSION T_SEMICOLON
   12         | T_RETURN T_SEMICOLON
   13         | T_BREAK T_SEMICOLON
   14         | T_CONTINUE T_SEMICOLON

   15 ITSTAT: T_WHILE T_LBRACKET EXPRESSION T_RBRACKET STAT
   16       | T_FOR T_LBRACKET EXPRESSION T_SEMICOLON EXPRESSION T_SEMICOLON EXPRESSION T_RBRACKET STAT
   17       | T_FOR T_LBRACKET EXPRESSION T_SEMICOLON EXPRESSION T_SEMICOLON T_RBRACKET STAT
   18       | T_FOR T_LBRACKET EXPRESSION T_SEMICOLON T_SEMICOLON EXPRESSION T_RBRACKET STAT
   19       | T_FOR T_LBRACKET T_SEMICOLON EXPRESSION T_SEMICOLON EXPRESSION T_RBRACKET STAT
   20       | T_FOR T_LBRACKET EXPRESSION T_SEMICOLON T_SEMICOLON T_RBRACKET STAT
   21       | T_FOR T_LBRACKET T_SEMICOLON T_SEMICOLON EXPRESSION T_RBRACKET STAT
   22       | T_FOR T_LBRACKET T_SEMICOLON EXPRESSION T_SEMICOLON T_RBRACKET STAT
   23       | T_FOR T_LBRACKET T_SEMICOLON T_SEMICOLON T_RBRACKET STAT

   24 SELSTAT: T_IF T_LBRACKET EXPRESSION T_RBRACKET STAT
   25        | T_IF T_LBRACKET EXPRESSION T_RBRACKET STAT T_ELSE STAT
   26        | T_SWITCH T_LBRACKET EXPRESSION T_RBRACKET STAT

   27 COMPSTAT: T_LCURLYBRACKET DECLLIST STATLIST T_RCURLYBRACKET
   28         | T_LCURLYBRACKET DECLLIST T_RCURLYBRACKET
   29         | T_LCURLYBRACKET STATLIST T_RCURLYBRACKET
   30         | T_LCURLYBRACKET T_RCURLYBRACKET

   31 EXPRSTAT: EXPRESSION T_SEMICOLON
   32         | T_SEMICOLON

   33 LABSTAT: VAR T_COLON STAT
   34        | T_CASE CONDEXPR T_COLON STAT
   35        | T_DEFAULT T_COLON STAT

   36 STATLIST: STAT
   37         | STATLIST STAT

   38 STAT: COMPSTAT
   39     | SELSTAT
   40     | ITSTAT
   41     | JUMPSTAT
   42     | EXPRSTAT
   43     | LABSTAT

   44 EXPRESSION: ASSEXPR
   45           | EXPRESSION T_COMMA ASSEXPR

   46 DECLLIST: DECLARATION
   47         | DECLLIST DECLARATION

   48 DECLARATION: DECLSPEC INITDECLLIST T_SEMICOLON
   49            | DECLSPEC T_SEMICOLON

   50 INITDECLLIST: INITDECL
   51             | INITDECLLIST T_COMMA INITDECL

   52 INITDECL: DECLARATOR
   53         | DECLARATOR T_EQUALS INITIALIZ

   54 ASSEXPR: CONDEXPR
   55        | UNARY T_EQUALS ASSEXPR
   56        | UNARY T_MULTEQUALS ASSEXPR
   57        | UNARY T_DIVEQUALS ASSEXPR
   58        | UNARY T_MODULOEQUALS ASSEXPR
   59        | UNARY T_PLUSEQUALS ASSEXPR
   60        | UNARY T_SUBEQUALS ASSEXPR
   61        | UNARY T_LEFTSHIFTEQUALS ASSEXPR
   62        | UNARY T_RIGHTSHIFTEQUALS ASSEXPR
   63        | UNARY T_ANDEQUALS ASSEXPR
   64        | UNARY T_XOREQUALS ASSEXPR
   65        | UNARY T_OREQUALS ASSEXPR

   66 CONDEXPR: LOGOREXPR
   67         | LOGOREXPR T_QMARK EXPRESSION T_COLON CONDEXPR

   68 LOGOREXPR: LOGANDEXPR
   69          | LOGOREXPR T_LOGICALOR LOGANDEXPR

   70 LOGANDEXPR: INCLEXPR
   71           | LOGANDEXPR T_LOGICALAND INCLEXPR

   72 INCLEXPR: XOREXPR
   73         | INCLEXPR T_BITOR XOREXPR

   74 XOREXPR: ANDEXPR
   75        | XOREXPR T_XOR ANDEXPR

   76 ANDEXPR: EQUEXPR
   77        | ANDEXPR T_BITAND EQUEXPR

   78 EQUEXPR: RELEXPR
   79        | EQUEXPR T_CONDEQUALSTO RELEXPR
   80        | EQUEXPR T_NOTEQ RELEXPR

   81 RELEXPR: SHIFTEXPR
   82        | RELEXPR T_LESSTHAN SHIFTEXPR
   83        | RELEXPR T_GREATERTHAN SHIFTEXPR
   84        | RELEXPR T_LESSTHANEQ SHIFTEXPR
   85        | RELEXPR T_GREATERTHANEQ SHIFTEXPR

   86 INITIALIZLIST: INITIALIZ
   87              | INITIALIZLIST T_COMMA INITIALIZ

   88 INITIALIZ: ASSEXPR
   89          | T_LCURLYBRACKET INITIALIZLIST T_RCURLYBRACKET
   90          | T_LCURLYBRACKET INITIALIZLIST T_COMMA T_RCURLYBRACKET

   91 PARAMLIST: PARAMDECL
   92          | PARAMLIST T_COMMA PARAMDECL

   93 PARAMDECL: DECLSPEC DECLARATOR

   94 ENUMSPECIFIER: T_ENUM T_LCURLYBRACKET ENUMERATORLIST T_RCURLYBRACKET
   95              | T_ENUM VAR T_LCURLYBRACKET ENUMERATORLIST T_RCURLYBRACKET
   96              | T_ENUM VAR

   97 ENUMERATORLIST: ENUMERATOR
   98               | ENUMERATORLIST T_COMMA ENUMERATOR

   99 ENUMERATOR: VAR
  100           | VAR T_EQUALS NUM

  101 DECLARATOR: DIRECTDECL
  102           | T_TIMES DIRECTDECL

  103 DIRECTDECL: VAR
  104           | DIRECTDECL T_LSBRACKET ASSEXPR T_RSBRACKET
  105           | DIRECTDECL T_LSBRACKET T_RSBRACKET
  106           | DIRECTDECL T_LBRACKET PARAMLIST T_RBRACKET
  107           | T_LBRACKET DECLARATOR T_RBRACKET
  108           | DIRECTDECL T_LBRACKET T_RBRACKET

  109 SHIFTEXPR: EXPR
  110          | SHIFTEXPR T_LEFTSHIFT EXPR
  111          | SHIFTEXPR T_RIGHTSHIFT EXPR

  112 EXPR: TERM
  113     | EXPR T_PLUS TERM
  114     | EXPR T_MINUS TERM

  115 TERM: UNARY
  116     | TERM T_TIMES UNARY
  117     | TERM T_DIVIDE UNARY
  118     | TERM T_MODULO UNARY

  119 UNARY: POSTFIX
  120      | T_MINUS UNARY
  121      | T_PLUS UNARY
  122      | T_INCREMENT UNARY
  123      | T_DECREMENT UNARY
  124      | T_BITAND UNARY
  125      | T_TIMES UNARY
  126      | T_TILDE UNARY
  127      | T_LOGNOT UNARY

  128 ARGEXPRLIST: ASSEXPR
  129            | ARGEXPRLIST T_COMMA ASSEXPR

  130 POSTFIX: FACTOR
  131        | POSTFIX T_LBRACKET ARGEXPRLIST T_RBRACKET
  132        | POSTFIX T_LBRACKET T_RBRACKET
  133        | POSTFIX T_LSBRACKET EXPRESSION T_RSBRACKET
  134        | UNARY T_INCREMENT
  135        | UNARY T_DECREMENT

  136 FACTOR: NUM
  137       | VAR
  138       | T_LBRACKET EXPRESSION T_RBRACKET

  139 NUM: T_NUMBER

  140 VAR: T_VARIABLE

  141 DECLSPEC: T_INT
  142         | T_VOID
  143         | ENUMSPECIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
T_TIMES (258) 102 116 125
T_DIVIDE (259) 117
T_PLUS (260) 113 121
T_MINUS (261) 114 120
T_LOGICALAND (262) 71
T_LOGICALOR (263) 69
T_LESSTHAN (264) 82
T_CONDEQUALSTO (265) 79
T_EQUALS (266) 53 55 100
T_LBRACKET (267) 10 15 16 17 18 19 20 21 22 23 24 25 26 106 107 108
    131 132 138
T_RBRACKET (268) 10 15 16 17 18 19 20 21 22 23 24 25 26 106 107 108
    131 132 138
T_LCURLYBRACKET (269) 27 28 29 30 89 90 94 95
T_RCURLYBRACKET (270) 27 28 29 30 89 90 94 95
T_COMMA (271) 45 51 87 90 92 98 129
T_SEMICOLON (272) 11 12 13 14 16 17 18 19 20 21 22 23 31 32 48 49
T_LSBRACKET (273) 104 105 133
T_RSBRACKET (274) 104 105 133
T_NUMBER (275) 139
T_VARIABLE (276) 140
T_INT (277) 10 141
T_VOID (278) 142
T_IF (279) 24 25
T_WHILE (280) 15
T_ELSE (281) 25
T_RETURN (282) 11 12
T_MAIN (283) 10
T_BITAND (284) 77 124
T_BITOR (285) 73
T_GREATERTHAN (286) 83
T_XOR (287) 75
T_LESSTHANEQ (288) 84
T_GREATERTHANEQ (289) 85
T_NOTEQ (290) 80
T_MULTEQUALS (291) 56
T_DIVEQUALS (292) 57
T_MODULOEQUALS (293) 58
T_PLUSEQUALS (294) 59
T_SUBEQUALS (295) 60
T_LEFTSHIFT (296) 110
T_RIGHTSHIFT (297) 111
T_LEFTSHIFTEQUALS (298) 61
T_RIGHTSHIFTEQUALS (299) 62
T_ANDEQUALS (300) 63
T_XOREQUALS (301) 64
T_OREQUALS (302) 65
T_MODULO (303) 118
T_QMARK (304) 67
T_COLON (305) 33 34 35 67
T_FOR (306) 16 17 18 19 20 21 22 23
T_DO (307)
T_BREAK (308) 13
T_CONTINUE (309) 14
T_SWITCH (310) 26
T_DEFAULT (311) 35
T_CASE (312) 34
T_ENUM (313) 94 95 96
T_INCREMENT (314) 122 134
T_DECREMENT (315) 123 135
T_LOGNOT (316) 127
T_TILDE (317) 126


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
ROOT (64)
    on left: 1, on right: 0
TRANSUNIT (65)
    on left: 2 3, on right: 1 3
EXTDECL (66)
    on left: 4 5, on right: 2 3
FUNCDECL (67)
    on left: 6 7 8 9 10, on right: 4
JUMPSTAT (68)
    on left: 11 12 13 14, on right: 41
ITSTAT (69)
    on left: 15 16 17 18 19 20 21 22 23, on right: 40
SELSTAT (70)
    on left: 24 25 26, on right: 39
COMPSTAT (71)
    on left: 27 28 29 30, on right: 6 7 8 9 10 38
EXPRSTAT (72)
    on left: 31 32, on right: 42
LABSTAT (73)
    on left: 33 34 35, on right: 43
STATLIST (74)
    on left: 36 37, on right: 27 29 37
STAT (75)
    on left: 38 39 40 41 42 43, on right: 15 16 17 18 19 20 21 22 23
    24 25 26 33 34 35 36 37
EXPRESSION (76)
    on left: 44 45, on right: 11 15 16 17 18 19 20 21 22 24 25 26 31
    45 67 133 138
DECLLIST (77)
    on left: 46 47, on right: 6 7 27 28 47
DECLARATION (78)
    on left: 48 49, on right: 5 46 47
INITDECLLIST (79)
    on left: 50 51, on right: 48 51
INITDECL (80)
    on left: 52 53, on right: 50 51
ASSEXPR (81)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65, on right: 44 45 55
    56 57 58 59 60 61 62 63 64 65 88 104 128 129
CONDEXPR (82)
    on left: 66 67, on right: 34 54 67
LOGOREXPR (83)
    on left: 68 69, on right: 66 67 69
LOGANDEXPR (84)
    on left: 70 71, on right: 68 69 71
INCLEXPR (85)
    on left: 72 73, on right: 70 71 73
XOREXPR (86)
    on left: 74 75, on right: 72 73 75
ANDEXPR (87)
    on left: 76 77, on right: 74 75 77
EQUEXPR (88)
    on left: 78 79 80, on right: 76 77 79 80
RELEXPR (89)
    on left: 81 82 83 84 85, on right: 78 79 80 82 83 84 85
INITIALIZLIST (90)
    on left: 86 87, on right: 87 89 90
INITIALIZ (91)
    on left: 88 89 90, on right: 53 86 87
PARAMLIST (92)
    on left: 91 92, on right: 92 106
PARAMDECL (93)
    on left: 93, on right: 91 92
ENUMSPECIFIER (94)
    on left: 94 95 96, on right: 143
ENUMERATORLIST (95)
    on left: 97 98, on right: 94 95 98
ENUMERATOR (96)
    on left: 99 100, on right: 97 98
DECLARATOR (97)
    on left: 101 102, on right: 6 7 8 9 52 53 93 107
DIRECTDECL (98)
    on left: 103 104 105 106 107 108, on right: 101 102 104 105 106
    108
SHIFTEXPR (99)
    on left: 109 110 111, on right: 81 82 83 84 85 110 111
EXPR (100)
    on left: 112 113 114, on right: 109 110 111 113 114
TERM (101)
    on left: 115 116 117 118, on right: 112 113 114 116 117 118
UNARY (102)
    on left: 119 120 121 122 123 124 125 126 127, on right: 55 56 57
    58 59 60 61 62 63 64 65 115 116 117 118 120 121 122 123 124 125
    126 127 134 135
ARGEXPRLIST (103)
    on left: 128 129, on right: 129 131
POSTFIX (104)
    on left: 130 131 132 133 134 135, on right: 119 131 132 133
FACTOR (105)
    on left: 136 137 138, on right: 130
NUM (106)
    on left: 139, on right: 100 136
VAR (107)
    on left: 140, on right: 33 95 96 99 100 103 137
DECLSPEC (108)
    on left: 141 142 143, on right: 6 8 48 49 93


State 0

    0 $accept: . ROOT $end

    T_TIMES     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_INT       shift, and go to state 4
    T_VOID      shift, and go to state 5
    T_ENUM      shift, and go to state 6

    ROOT           go to state 7
    TRANSUNIT      go to state 8
    EXTDECL        go to state 9
    FUNCDECL       go to state 10
    DECLARATION    go to state 11
    ENUMSPECIFIER  go to state 12
    DECLARATOR     go to state 13
    DIRECTDECL     go to state 14
    VAR            go to state 15
    DECLSPEC       go to state 16


State 1

  102 DECLARATOR: T_TIMES . DIRECTDECL

    T_LBRACKET  shift, and go to state 2
    T_VARIABLE  shift, and go to state 3

    DIRECTDECL  go to state 17
    VAR         go to state 15


State 2

  107 DIRECTDECL: T_LBRACKET . DECLARATOR T_RBRACKET

    T_TIMES     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_VARIABLE  shift, and go to state 3

    DECLARATOR  go to state 18
    DIRECTDECL  go to state 14
    VAR         go to state 15


State 3

  140 VAR: T_VARIABLE .

    $default  reduce using rule 140 (VAR)


State 4

   10 FUNCDECL: T_INT . T_MAIN T_LBRACKET T_RBRACKET COMPSTAT
  141 DECLSPEC: T_INT .

    T_MAIN  shift, and go to state 19

    $default  reduce using rule 141 (DECLSPEC)


State 5

  142 DECLSPEC: T_VOID .

    $default  reduce using rule 142 (DECLSPEC)


State 6

   94 ENUMSPECIFIER: T_ENUM . T_LCURLYBRACKET ENUMERATORLIST T_RCURLYBRACKET
   95              | T_ENUM . VAR T_LCURLYBRACKET ENUMERATORLIST T_RCURLYBRACKET
   96              | T_ENUM . VAR

    T_LCURLYBRACKET  shift, and go to state 20
    T_VARIABLE       shift, and go to state 3

    VAR  go to state 21


State 7

    0 $accept: ROOT . $end

    $end  shift, and go to state 22


State 8

    1 ROOT: TRANSUNIT .
    3 TRANSUNIT: TRANSUNIT . EXTDECL

    T_TIMES     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_VARIABLE  shift, and go to state 3
    T_INT       shift, and go to state 4
    T_VOID      shift, and go to state 5
    T_ENUM      shift, and go to state 6

    $default  reduce using rule 1 (ROOT)

    EXTDECL        go to state 23
    FUNCDECL       go to state 10
    DECLARATION    go to state 11
    ENUMSPECIFIER  go to state 12
    DECLARATOR     go to state 13
    DIRECTDECL     go to state 14
    VAR            go to state 15
    DECLSPEC       go to state 16


State 9

    2 TRANSUNIT: EXTDECL .

    $default  reduce using rule 2 (TRANSUNIT)


State 10

    4 EXTDECL: FUNCDECL .

    $default  reduce using rule 4 (EXTDECL)


State 11

    5 EXTDECL: DECLARATION .

    $default  reduce using rule 5 (EXTDECL)


State 12

  143 DECLSPEC: ENUMSPECIFIER .

    $default  reduce using rule 143 (DECLSPEC)


State 13

    7 FUNCDECL: DECLARATOR . DECLLIST COMPSTAT
    9         | DECLARATOR . COMPSTAT
